use process builder and close reader